--- a/index.html
+++ b/index.html
@@ -108,6 +108,49 @@
     </section>
     <!-- about section end -->
 
+    <!-- menu secion start -->
+    <section class="menu" id="menu">
+      <h1 class="heading">out <span>menu</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="./images/menu-1.png" alt="">
+          <h3>tasty and healty</h3>
+          <div class="price">$15.99 <span>20.99</span></div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+        <div class="box">
+          <img src="./images/menu-2.png" alt="">
+          <h3>tasty and healty</h3>
+          <div class="price">$15.99 <span>20.99</span></div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+        <div class="box">
+          <img src="./images/menu-3.png" alt="">
+          <h3>tasty and healty</h3>
+          <div class="price">$15.99 <span>20.99</span></div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+        <div class="box">
+          <img src="./images/menu-4.png" alt="">
+          <h3>tasty and healty</h3>
+          <div class="price">$15.99 <span>20.99</span></div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+        <div class="box">
+          <img src="./images/menu-5.png" alt="">
+          <h3>tasty and healty</h3>
+          <div class="price">$15.99 <span>20.99</span></div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+        <div class="box">
+          <img src="./images/menu-6.png" alt="">
+          <h3>tasty and healty</h3>
+          <div class="price">$15.99 <span>20.99</span></div>
+          <a href="#" class="btn">add to cart</a>
+        </div>
+      </div>
+    </section>
+    <!-- menu secion end -->
 
 
     <!-- custom js file link -->
