--- a/index.html
+++ b/index.html
@@ -224,6 +224,83 @@
     </section>
     <!-- procucts section end -->
 
+    <!-- review section start -->
+    <section class="review" id="review">
+      <h1 class="heading"> customer's <span>review</span></h1>
+
+      <div class="box-container">
+        <div class="box">
+          <img src="./images/quote-img.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid assumenda nisi sint, saepe temporibus minima eveniet id! Enim, cupiditate tempora!</p>
+          <img src="./images/pic-1.png" alt="" class="user">
+          <h3>john deo</h3>
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="./images/quote-img.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid assumenda nisi sint, saepe temporibus minima eveniet id! Enim, cupiditate tempora!</p>
+          <img src="./images/pic-2.png" alt="" class="user">
+          <h3>john deo</h3>
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
+          </div>
+        </div>
+        <div class="box">
+          <img src="./images/quote-img.png" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid assumenda nisi sint, saepe temporibus minima eveniet id! Enim, cupiditate tempora!</p>
+          <img src="./images/pic-3.png" alt="" class="user">
+          <h3>john deo</h3>
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- review section end -->
+
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+      <h1 class="heading"><span>contact</span> us </h1>
+
+      <div class="row">
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d231384.04375912828!2d102.60096416582452!3d25.021321614924204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x36d083c31227d3cb%3A0xccb1f3a4984f0a36!2sKunming%2C%20Yunnan%2C%20China!5e0!3m2!1sen!2shk!4v1660710884180!5m2!1sen!2shk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <form action="">
+          <h3>get in touch</h3>
+          <div class="inputBox">
+            <i class="fa-solid fa-user"></i>
+            <input type="text" placeholder="name">
+          </div>
+          <div class="inputBox">
+            <i class="fa-solid fa-envelope"></i>
+            <input type="email" placeholder="email">
+          </div>
+          <div class="inputBox">
+            <i class="fa-solid fa-phone"></i>
+            <input type="number" placeholder="number">
+          </div>
+          <input type="submit" value="contact now" class="btn">
+        </form>
+      </div>
+    </section>
+
+    <!-- contact section end -->
+
+
 
     <!-- custom js file link -->
     <script src="./app.js"></script>
