--- a/index.html
+++ b/index.html
@@ -300,7 +300,47 @@
 
     <!-- contact section end -->
 
+    <!-- blogs section start -->
+    <section class="blogs" id="blogs">
+      <h1 class="heading"> out <span>blogs</span></h1>
 
+      <div class="box-container">
+        <div class="box">
+          <div class="image">
+            <img src="./images/blog-1.jpeg" alt="">
+          </div>
+          <div class="content">
+            <a href="#" class="title"> tasty and refreshin coffee</a>
+            <span>by admin / 17st aug, 2011</span>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, perferendis.</p>
+            <a href="#" class="btn">read more</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="./images/blog-2.jpeg" alt="">
+          </div>
+          <div class="content">
+            <a href="#" class="title"> tasty and refreshin coffee</a>
+            <span>by admin / 17st aug, 2011</span>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, perferendis.</p>
+            <a href="#" class="btn">read more</a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="./images/blog-3.jpeg" alt="">
+          </div>
+          <div class="content">
+            <a href="#" class="title"> tasty and refreshin coffee</a>
+            <span>by admin / 17st aug, 2011</span>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, perferendis.</p>
+            <a href="#" class="btn">read more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- blogs section end -->
 
     <!-- custom js file link -->
     <script src="./app.js"></script>
