--- a/index.html
+++ b/index.html
@@ -342,6 +342,31 @@
     </section>
     <!-- blogs section end -->
 
+    <!-- Footer start -->
+      <section class="footer">
+        <div class="share">
+          <a href="#" class="fa-brands fa-facebook-f" ></a>
+          <a href="#" class="fa-brands fa-twitter" ></a>
+          <a href="#" class="fa-brands fa-instagram" ></a>
+          <a href="#" class="fa-brands fa-linkedin" ></a>
+          <a href="#" class="fa-brands fa-pinterest" ></a>
+        </div>
+
+        <div class="links">
+          <a href="#home">home</a>
+          <a href="#about">about</a>
+          <a href="#menu">menu</a>
+          <a href="#products">products</a>
+          <a href="#review">review</a>
+          <a href="#contact">contact</a>
+          <a href="#blogs">blogs</a>
+        </div>
+
+        <div class="credit">created by <span>Md Ashik Mahmud</span> | all rights reserved</div>
+      </section>
+    <!-- Footer end -->
+
+
     <!-- custom js file link -->
     <script src="./app.js"></script>
   </body>
